--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,7 +1,3 @@
 @import "tailwindcss";
-
+@import './components/_background.scss';
 @source not "../../public/*";
-
-body {
-    background-color: skyblue;
-}
