[SETUP|HTML] Add minimal index structure

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,18 +2,25 @@
 <html lang="fr">
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Thomas Gharbi{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Bienvenue sur le site officiel de Thomas Gharbi, développeur Web Back-end">
+        <meta name="robots" content="index, follow">
+        <meta name="author" content="Thomas Gharbi">
+
+        <title>{% block title %}Thomas Gharbi - Développeur Web Créatif{% endblock %}</title>
+
+        <link rel="canonical" href="{{ app.request.uri }}">
+        <link rel="icon" href="{{ asset('favicon.ico') }}" type="image/x-icon">
+
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
         {% endblock %}
+    </head>
+    <body>
+        {% block body %}{% endblock %}
+
         {% block javascripts %}
             {{ encore_entry_script_tags('app') }}
         {% endblock %}
-    </head>
-    <body class="min-h-screen overflow-hidden relative">
-    {% include 'partials/svg/background.svg.html.twig' %}
-    <div class="absolute inset-0 bg-custom-grid"></div>
-    {% block body %}{% endblock %}
     </body>
 </html>
