--- a/templates/main_page/index.html.twig
+++ b/templates/main_page/index.html.twig
@@ -1,7 +1,17 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1 class="text-4xl font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-blue-600 to-purple-600 text-center mb-6 py-2">
-        Bienvenue !
-    </h1>
+    <aside class="fixed inset-0 -z-10 pointer-events-none" aria-hidden="true">
+        {% include '@main/background.html.twig' %}
+    </aside>
+    <main class="relative z-10 w-full min-h-screen text-white flex flex-col">
+        <section class="flex flex-col md:flex-row h-[100vh]" aria-label="Présentation Principale">
+            <article class="w-full md:w-1/2 h-full p-8 flex flex-col justify-center items-center">
+{#               Left content#}
+            </article>
+            <article class="w-full md:w-1/2 h-full p-8 flex flex-col justify-center items-center">
+{#                Right content#}
+            </article>
+        </section>
+    </main>
 {% endblock %}
