--- a/templates/partials/svg/background.svg.twig
+++ b/templates/partials/svg/background.svg.twig
@@ -1,12 +1,19 @@
-<svg viewBox="0 0 100 100" class="absolute inset-0 w-full h-full" preserveAspectRatio="xMidYMid slice">
+<svg
+    viewBox="0 0 100 100"
+    class="absolute inset-0 w-full h-full"
+    preserveAspectRatio="xMidYMid slice"
+    role="presentation"
+    aria-hidden="true"
+    focusable="false"
+>
     <defs>
         <radialGradient id="Gradient1" cx="50%" cy="50%" r="0.5">
-            <stop offset="0%" stop-color="var(--gradient-start)" />
-            <stop offset="100%" stop-color="var(--gradient-end)" />
+            <stop offset="0%" stop-color="var(--gradient-start)"/>
+            <stop offset="100%" stop-color="var(--gradient-end)"/>
         </radialGradient>
         <radialGradient id="Gradient2" cx="50%" cy="50%" r="0.5">
-            <stop offset="0%" stop-color="var(--gradient-start-second)" />
-            <stop offset="100%" stop-color="var(--gradient-end-second)" />
+            <stop offset="0%" stop-color="var(--gradient-start-second)"/>
+            <stop offset="100%" stop-color="var(--gradient-end-second)"/>
         </radialGradient>
     </defs>
 
