--- a/templates/main_page/index.html.twig
+++ b/templates/main_page/index.html.twig
@@ -7,7 +7,14 @@
     <main class="relative z-10 w-full min-h-screen text-white flex flex-col">
         <section class="flex flex-col md:flex-row h-[100vh]" aria-label="Présentation Principale">
             <article class="w-full md:w-1/2 h-full p-8 flex flex-col justify-center items-center">
-{#               Left content#}
+                <div class="w-full lg:w-1/2 space-y-6 sm:space-y-8 text-left lg:text-left">
+                    <div class="overflow-visible min-w-max">
+                        <h1 class="text-5xl sm:text-6xl md:text-6xl lg:text-6xl xl:text-7xl font-bold tracking-tight">
+                            <span class="block bg-gradient-to-r from-white via-blue-100 to-purple-200 bg-clip-text text-transparent">Développeur</span>
+                            <span class="block mt-2 bg-gradient-to-r from-indigo-500 to-purple-500 bg-clip-text text-transparent">Back-end</span>
+                        </h1>
+                    </div>
+                </div>
             </article>
             <article class="w-full md:w-1/2 h-full p-8 flex flex-col justify-center items-center">
 {#                Right content#}
