[SETUP|HTML] Add subtitle to main page

--- a/templates/main_page/index.html.twig
+++ b/templates/main_page/index.html.twig
@@ -14,6 +14,9 @@
                             <span class="block mt-2 bg-gradient-to-r from-indigo-500 to-purple-500 bg-clip-text text-transparent">Back-end</span>
                         </h1>
                     </div>
+                    <h2 class="text-base md:text-md text-gray-400 max-w-2xl leading-relaxed font-light ml-1">
+                        Développement d'applications web complètes et fonctionnelles.
+                    </h2>
                 </div>
             </article>
             <article class="w-full md:w-1/2 h-full p-8 flex flex-col justify-center items-center">
