--- a/templates/main_page/index.html.twig
+++ b/templates/main_page/index.html.twig
@@ -40,6 +40,20 @@
                             data-symfony--ux-typed-strings-value="{{ strings|json_encode|e('html_attr') }}"
                         ></span>
                     </div>
+                    <div class="flex gap-4 flex-nowrap">
+                        <a class="flex-1 inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm md:text-base font-medium ring-offset-background transition-colors bg-gradient-to-tl from-indigo-500 to-fuchsia-500 text-white px-3 py-2 relative z-[10] h-[42px]">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M3 16.5v2.25A2.25 2.25 0 0 0 5.25 21h13.5A2.25 2.25 0 0 0 21 18.75V16.5M16.5 12 12 16.5m0 0L7.5 12m4.5 4.5V3" />
+                            </svg>
+                            Télécharger le CV
+                        </a>
+                        <a class="flex-1 inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm md:text-base font-medium ring-offset-background transition-colors bg-gradient-to-tl from-indigo-500 to-fuchsia-500 text-white px-3 py-2 relative z-[10] h-[42px]">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M21.75 6.75v10.5a2.25 2.25 0 0 1-2.25 2.25h-15a2.25 2.25 0 0 1-2.25-2.25V6.75m19.5 0A2.25 2.25 0 0 0 19.5 4.5h-15a2.25 2.25 0 0 0-2.25 2.25m19.5 0v.243a2.25 2.25 0 0 1-1.07 1.916l-7.5 4.615a2.25 2.25 0 0 1-2.36 0L3.32 8.91a2.25 2.25 0 0 1-1.07-1.916V6.75" />
+                            </svg>
+                            Contact
+                        </a>
+                    </div>
                 </div>
             </article>
             <article class="w-full md:w-1/2 h-full p-8 flex flex-col justify-center items-center">
