--- a/templates/main_page/index.html.twig
+++ b/templates/main_page/index.html.twig
@@ -1,11 +1,15 @@
 {% extends 'base.html.twig' %}
 
+{% block meta %}
+    <meta name="description" content="Développeur Back-end spécialisé Symfony/PHP, création d'applications web sécurisées, architectures SOLID, tests automatisés et CI/CD.">
+{% endblock %}
+
 {% block body %}
     <aside class="fixed inset-0 -z-10 pointer-events-none" aria-hidden="true">
         {% include '@main/background.html.twig' %}
     </aside>
     <main class="relative z-10 w-full min-h-screen text-white flex flex-col">
-        <section class="flex flex-col md:flex-row h-[100vh]" aria-label="Présentation Principale">
+        <section class="flex flex-col md:flex-row h-[100vh]">
             <article class="w-full md:w-1/2 h-full p-8 flex flex-col justify-center items-center">
                 <div class="w-full lg:w-1/2 space-y-6 sm:space-y-8 text-left lg:text-left">
                     <div class="overflow-visible min-w-max">
@@ -14,9 +18,9 @@
                             <span class="block mt-2 bg-gradient-to-r from-indigo-500 to-purple-500 bg-clip-text text-transparent">Back-end</span>
                         </h1>
                     </div>
-                    <h2 class="text-base md:text-md text-gray-400 max-w-2xl leading-relaxed font-light ml-1">
+                    <p class="text-base md:text-md text-gray-400 max-w-2xl leading-relaxed font-light ml-1">
                         Développement d'applications web complètes et fonctionnelles.
-                    </h2>
+                    </p>
                     <div class="flex flex-wrap gap-3">
                         <a class="pill" href="https://www.php.net/docs.php">PHP</a>
                         <a class="pill" href="https://symfony.com/doc/current/index.html">Symfony</a>
@@ -41,21 +45,22 @@
                         ></span>
                     </div>
                     <div class="flex gap-4 flex-nowrap">
-                        <a class="flex-1 btn-cta">
+                        <a class="flex-1 btn-cta" download>
                             {{ include('@icons/download.svg') }}
-                            Télécharger le CV
+                            Télécharger mon CV
                         </a>
                         <a class="flex-1 btn-cta">
                             {{ include('@icons/mail.svg') }}
-                            Contact
+                            Contactez-moi
                         </a>
                     </div>
+
                     <div class="flex flex-wrap gap-3 justify-start">
-                        <a href="https://github.com/thomasGharbi" class="pill">
+                        <a href="https://github.com/thomasGharbi" class="pill" rel="noopener noreferrer">
                             {{ include('@icons/social/github.svg') }}
                             GitHub
                         </a>
-                        <a href="https://www.linkedin.com/in/thomas-gharbi-4b65b7186" class="pill">
+                        <a href="https://www.linkedin.com/in/thomas-gharbi-4b65b7186" class="pill" rel="noopener noreferrer">
                             {{ include('@icons/social/linkedin.svg') }}
                             LinkedIn
                         </a>
