[REFACTOR|ICONS] Replace Tailwind icons with Symfony UX Icon system

--- a/templates/main_page/index.html.twig
+++ b/templates/main_page/index.html.twig
@@ -46,11 +46,11 @@
                     </div>
                     <div class="flex gap-4 flex-nowrap">
                         <a class="flex-1 btn-cta" download>
-                            {{ include('@icons/download.svg') }}
+                            {{ ux_icon('lucide:download', {class: 'size-6'}) }}
                             Télécharger mon CV
                         </a>
                         <a class="flex-1 btn-cta">
-                            {{ include('@icons/mail.svg') }}
+                            {{ ux_icon('lucide:mail', {class: 'size-6'}) }}
                             Contactez-moi
                         </a>
                     </div>
