[REFACTOR|ICONS] Replace custom icon calls with Twig components

--- a/templates/main_page/background.html.twig
+++ b/templates/main_page/background.html.twig
@@ -1,4 +1,4 @@
-{% include '@svg/background.svg' ignore missing %}
+{% include 'partials/background.svg.twig' ignore missing %}
 
 {% if is_desktop() %}
     <div class="absolute inset-0 bg-custom-grid" aria-hidden="true"></div>
