--- a/templates/main_page/index.html.twig
+++ b/templates/main_page/index.html.twig
@@ -57,18 +57,18 @@
 
                     <div class="flex flex-wrap gap-3 justify-start">
                         <a href="https://github.com/thomasGharbi" class="pill" rel="noopener noreferrer">
-                            {{ include('@icons/social/github.svg') }}
+                            <twig:icon name="social/github" class="w-5 h-5 fill-current text-gray-400" />
                             GitHub
                         </a>
                         <a href="https://www.linkedin.com/in/thomas-gharbi-4b65b7186" class="pill" rel="noopener noreferrer">
-                            {{ include('@icons/social/linkedin.svg') }}
+                            <twig:icon name="social/linkedin" class="w-5 h-5 fill-current text-indigo-500" />
                             LinkedIn
                         </a>
                     </div>
                 </div>
             </article>
             <article class="w-full md:w-1/2 h-full p-8 flex flex-col justify-center items-center">
-{#                Right content#}
+{#                Right content #}
             </article>
         </section>
     </main>
