--- a/templates/icons/social/linkedin.svg.twig
+++ b/templates/icons/social/linkedin.svg.twig
@@ -1,4 +1,4 @@
-<svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 fill-current text-blue-500" viewBox="0 0 448 512" role="img" aria-labelledby="linkedin-icon">
+<svg xmlns="http://www.w3.org/2000/svg" class="{{ class|default('') }}" viewBox="0 0 448 512" role="img" aria-labelledby="linkedin-icon">
     <title id="title-desc-linkedin">Logo LinkedIn</title>
     <desc id="desc-desc-linkedin">Icône de réseau social professionnel LinkedIn</desc>
     <path d="M100.28 448H7.4V148.9h92.88zM53.79 108.1C24.09 108.1 0 83.5 0 53.8 0 24.1 24.09-.5 53.79-.5s53.79 24.6 53.79 54.3c0 29.7-24.1 54.3-53.79 54.3zM447.9 448h-92.4V304.1c0-34.3-.7-78.4-47.8-78.4-47.8 0-55.1 37.3-55.1 75.8V448h-92.5V148.9h88.8v40.8h1.3c12.4-23.6 42.7-48.4 87.9-48.4 94 0 111.3 61.9 111.3 142.3V448z"/>
