[UPDATE|CONTENT] Add technology cards to skills section

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -2,4 +2,5 @@
 @import './components/_background.scss';
 @import './components/_cta.scss';
 @import './components/_pill.scss';
+@import './components/_card.scss';
 @source not "../../public/*";
