--- a/templates/main_page/index.html.twig
+++ b/templates/main_page/index.html.twig
@@ -9,9 +9,9 @@
         {% include '@main/background.html.twig' %}
     </aside>
     <main class="relative z-10 w-full min-h-screen text-white flex flex-col">
-        <section class="flex flex-col md:flex-row h-[100vh]">
-            <article class="w-full md:w-1/2 h-full p-8 flex flex-col justify-center items-center">
-                <div class="w-full lg:w-1/2 space-y-6 sm:space-y-8 text-left lg:text-left">
+        <section class="flex flex-col md:flex-row">
+            <article class="w-full px-6 flex flex-col justify-center items-center h-screen">
+                <div class="w-full md:mr-12 lg:w-1/2 space-y-6 sm:space-y-8 text-left lg:text-left">
                     <div class="overflow-visible min-w-max">
                         <h1 class="text-5xl sm:text-6xl md:text-6xl lg:text-6xl xl:text-7xl font-bold tracking-tight">
                             <span class="block bg-gradient-to-r from-white via-blue-100 to-purple-200 bg-clip-text text-transparent">Développeur</span>
@@ -46,29 +46,97 @@
                     </div>
                     <div class="flex gap-4 flex-nowrap">
                         <a class="flex-1 btn-cta" download>
-                            {{ ux_icon('lucide:download', {class: 'size-6'}) }}
+                            {{ ux_icon('lucide:download', {class: 'size-4'}) }}
                             Télécharger mon CV
                         </a>
                         <a class="flex-1 btn-cta">
-                            {{ ux_icon('lucide:mail', {class: 'size-6'}) }}
+                            {{ ux_icon('lucide:mail', {class: 'size-4'}) }}
                             Contactez-moi
                         </a>
                     </div>
 
                     <div class="flex flex-wrap gap-3 justify-start">
                         <a href="https://github.com/thomasGharbi" class="pill" rel="noopener noreferrer">
-                            <twig:icon name="social/github" class="w-5 h-5 fill-current text-gray-400" />
+                            <twig:icon name="social/github" class="w-12 h-5 fill-current text-gray-400" />
                             GitHub
                         </a>
                         <a href="https://www.linkedin.com/in/thomas-gharbi-4b65b7186" class="pill" rel="noopener noreferrer">
-                            <twig:icon name="social/linkedin" class="w-5 h-5 fill-current text-indigo-500" />
+                            <twig:icon name="social/linkedin" class="w-12 h-5 fill-current text-indigo-500" />
                             LinkedIn
                         </a>
                     </div>
                 </div>
             </article>
-            <article class="w-full md:w-1/2 h-full p-8 flex flex-col justify-center items-center">
-{#                Right content #}
+            <article class="w-full px-6 flex justify-center items-center h-screen">
+                <div class="md:ml-12 grid grid-cols-3 xl:grid-cols-4 gap-4">
+                    <a href="https://www.php.net" target="_blank" title="PHP (Backend)"
+                       class="card hover:scale-105 cursor-pointer shadow-lg hover:shadow-xl transition-all duration-300 ease-in-out">
+                        <twig:icon name="skills/php" class="w-12"/>
+                    </a>
+                    <a href="https://symfony.com" target="_blank" title="Symfony Framework"
+                       class="card hover:scale-105 cursor-pointer shadow-lg hover:shadow-xl transition-all duration-300 ease-in-out">
+                        <twig:icon name="skills/symfony" class="w-12 text-indigo-500"/>
+                    </a>
+                    <a href="https://sylius.com" target="_blank" title="Sylius (E-commerce)"
+                       class="card hover:scale-105 cursor-pointer shadow-lg hover:shadow-xl transition-all duration-300 ease-in-out">
+                        <twig:icon name="skills/sylius" class="w-12"/>
+                    </a>
+                    <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript"
+                       target="_blank" title="JavaScript (Frontend)"
+                       class="card hover:scale-105 cursor-pointer shadow-lg hover:shadow-xl transition-all duration-300 ease-in-out">
+                        <twig:icon name="skills/javascript" class="w-12"/>
+                    </a>
+                    <a href="https://www.typescriptlang.org" target="_blank" title="TypeScript"
+                       class="card justify-center  hover:scale-105 cursor-pointer shadow-lg hover:shadow-xl transition-all duration-300 ease-in-out">
+                        <twig:icon name="skills/typescript" class="w-12"/>
+                    </a>
+                    <a href="https://react.dev" target="_blank" title="React.js"
+                       class="card hover:scale-105 cursor-pointer shadow-lg hover:shadow-xl transition-all duration-300 ease-in-out">
+                        <twig:icon name="skills/react" class="w-12"/>
+                    </a>
+                    <a href="https://nextjs.org" target="_blank" title="Next.js Framework"
+                       class="card hover:scale-105 cursor-pointer shadow-lg hover:shadow-xl transition-all duration-300 ease-in-out">
+                        <twig:icon name="skills/nextjs" class="w-12"/>
+                    </a>
+                    <a href="https://www.python.org" target="_blank" title="Python"
+                       class="card hover:scale-105 cursor-pointer shadow-lg hover:shadow-xl transition-all duration-300 ease-in-out">
+                        <twig:icon name="skills/python" class="w-12"/>
+                    </a>
+                    <a href="https://developer.mozilla.org/en-US/docs/Web/HTML"
+                       target="_blank" title="HTML5"
+                       class="card hover:scale-105 cursor-pointer shadow-lg hover:shadow-xl transition-all duration-300 ease-in-out">
+                        <twig:icon name="skills/html5" class="w-12"/>
+                    </a>
+                    <a href="https://developer.mozilla.org/en-US/docs/Web/CSS"
+                       target="_blank" title="CSS3"
+                       class="card hover:scale-105 cursor-pointer shadow-lg hover:shadow-xl transition-all duration-300 ease-in-out">
+                        <twig:icon name="skills/css3" class="w-12"/>
+                    </a>
+                    <a href="https://www.mysql.com" target="_blank" title="MySQL (RDBMS)"
+                       class="card hover:scale-105 cursor-pointer shadow-lg hover:shadow-xl transition-all duration-300 ease-in-out">
+                        <twig:icon name="skills/mysql" class="w-12"/>
+                    </a>
+                    <a href="https://redis.io" target="_blank" title="Redis (In-Memory DB)"
+                       class="card hover:scale-105 cursor-pointer shadow-lg hover:shadow-xl transition-all duration-300 ease-in-out">
+                        <twig:icon name="skills/redis" class="w-12"/>
+                    </a>
+                    <a href="https://www.postgresql.org" target="_blank" title="PostgreSQL (RDBMS)"
+                       class="card hover:scale-105 cursor-pointer shadow-lg hover:shadow-xl transition-all duration-300 ease-in-out">
+                        <twig:icon name="skills/postgresql" class="w-12"/>
+                    </a>
+                    <a href="https://www.docker.com" target="_blank" title="Docker"
+                       class="card hover:scale-105 cursor-pointer shadow-lg hover:shadow-xl transition-all duration-300 ease-in-out">
+                        <twig:icon name="skills/docker" class="w-12"/>
+                    </a>
+                    <a href="https://kubernetes.io" target="_blank" title="Kubernetes (Orchestration)"
+                       class="card hover:scale-105 cursor-pointer shadow-lg hover:shadow-xl transition-all duration-300 ease-in-out">
+                        <twig:icon name="skills/k8s" class="w-12"/>
+                    </a>
+                    <a href="https://www.linux.org" target="_blank" title="Linux OS"
+                       class="hidden xl:block card hover:scale-105 cursor-pointer shadow-lg hover:shadow-xl transition-all duration-300 ease-in-out">
+                        <twig:icon name="skills/linux" class="w-12"/>
+                    </a>
+                </div>
             </article>
         </section>
     </main>
