[UPDATE|ASSET] Add downloadable CV

--- a/templates/main_page/index.html.twig
+++ b/templates/main_page/index.html.twig
@@ -43,7 +43,7 @@
                         ></span>
                     </div>
                     <div class="flex gap-4 flex-nowrap">
-                        <a class="flex-1 btn-cta" download>
+                        <a href="{{ asset('download/cv_Thomas_Gharbi_anonym.pdf') }}" class="flex-1 btn-cta" download>
                             {{ ux_icon('lucide:download', {class: 'size-4'}) }}
                             {{ 'banner.cta.cv'|trans }}
                         </a>
